Tue Oct 28 17:06:17 GMT 2003  Tony Gale <gale@gtk.org>
                                                                                                                                   
        * docs/faq/gtk-faq.sgml: Update info on compiling GTK+

Tue Oct 28 10:34:24 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwindow.[ch] (gtk_window_is_active, 
	gtk_has_toplevel_focus): Add getters corresponding to
	the is_active and has_toplevel_focus properties.
	(#122531)

Tue Oct 28 10:18:55 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwindow.c (gtk_window_is_active): 

2003-10-28  Mark McLoughlin  <mark@skynet.ie>

	* gtk/gtkexpander.c:
	(gtk_expander_class_init): hook up the destroy handler.
	(gtk_expander_destroy), (gtk_expander_unrealize):
	remove the expand/collapse timeout on destroy instead
	of unrealize to avoid leaving the expander in a inconsistent
	state when unrealizing during animation.
	(gtk_expander_start_animation): remove realized check.
	(gtk_expander_set_expanded): if the widget isn't realized,
	expand immediately.

Tue Oct 28 09:44:16 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkxembed.c (_gtk_xembed_send_focus_message): Silently
	do nothing when recipient is NULL, as described in the
	doc comment. (#123107, Thomas Leonard)

Tue Oct 28 09:21:29 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmain.c (gtk_check_version): Move docs inline,
	rewrite docs, mention memory management for the return
	value. (Partly addresses #125549, Michael Natterer)

2003-10-28  Padraig O'Briain  <padraig.obriain@sun.com>

	* gtk/gtkfilechooserdefault.c (gtk_file_chooser_default_remove_filter):
	Changew index to filter_index to fix compilation error.

	* gtk/gtkfilesystem.h: Correct definition of gtk_file_path_get_string.

Mon Oct 27 15:47:58 2003  Manish Singh  <yosh@gimp.org>

	* gdk/x11/gdkscreen-x11.c: #include <X11/extensions/Xrandr.h> if
	we have RandR support, for XRRUpdateConfiguration declaration.
